--- a/ProgrammingPractice/Views/MultiThread/Index.cshtml
+++ b/ProgrammingPractice/Views/MultiThread/Index.cshtml
@@ -26,7 +26,7 @@
     <div class="col-md-5 jumbotron">
         <h2>Single Thread</h2>
         <div id="multiThread-compare-left" class="multiThread-compare-content">
-
+            <svg id="multiThread-fillGauge-left" width="90%" height="90%"></svg>
         </div>
         <div id="multiThread-compare-left-timer" class="multiThread-timer"></div>
     </div>
@@ -34,7 +34,7 @@
     <div class="col-md-5 jumbotron">
         <h2>MultiThread</h2>
         <div id="multiThread-compare-right" class="multiThread-compare-content">
-
+            <svg id="multiThread-fillGauge-right" width="90%" height="90%"></svg>
         </div>
         <div id="multiThread-compare-right-timer" class="multiThread-timer"></div>
     </div>
@@ -42,4 +42,5 @@
 
 <button id="multiThread-startOver" class="button-big-center button-green">Start Over</button>
 
+<script src="https://d3js.org/d3.v3.js"></script>
 @(Scripts.Render("~/bundles/multiThread"))
